# timeduration-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: timeduration-config.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp
include/timeduration/: timeduration.hpp
tests/: CMakeLists.txt  timeduration.cpp
